--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --jsx react --outDir dist src/**.ts",
+    "build": "tsc --project tsconfig.json",
     "dev": "npm run build -- --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@emotion/styled": "^10.0.27",
-    "@lskjs/dev": "^1.31.3",
+    "@lskjs/dev": "^1.32.4",
     "@lskjs/image": "^1.31.3",
     "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.56",
